# climatelens

./: README.md  index.html  package-lock.json
climatelens-backend/: Readme.md  ai_writer.py  api_client.py  main.py  models.py  pyproject.toml  services.py  utils.py  visualization.py
climatelens-backend/assets/: DejaVuSans-Bold.pkl  DejaVuSans-BoldOblique.pkl  DejaVuSans-Oblique.pkl  DejaVuSans.pkl
climatelens-frontend/: README.md  package-lock.json  tailwind.config.ts
climatelens-frontend/src/: App.tsx  config.ts
climatelens-frontend/src/components/: Footer.tsx  RiskChart.tsx
climatelens-frontend/src/components/ui/: chart.tsx
climatelens-frontend/src/pages/: Contact.tsx  Home.tsx  Report.tsx
climatelens-frontend/src/services/: api.ts
src/: index.css
src/components/: Footer.tsx  NavBar.tsx  PaywallModal.tsx  RiskChart.tsx
src/pages/: About.tsx  Contact.tsx
