[project]
name = "climatelens-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AroobMushtaq",email = "aroobmushtaq786@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "requests",
    "uvicorn (>=0.35.0,<0.36.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fpdf2 (>=2.8.4,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "seaborn (>=0.13.0,<0.14.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "openai (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
